# rosellas-hackathon

./: .dockerignore  .env.example  .gcloudignore  .gitignore  AGENTS.md  CLAUDE.md  README.md  jest.config.js  nx.json  package-lock.json  package.json  tsconfig.json
.cursor/rules/: start-development-session.mdc
.github/workflows/: backend-deploy.yml  crud-backend.yml  crud-frontend.yml  (+10 more)
apps/scamper-mcp-server/: .env.example  Dockerfile  README.md  cloudbuild.yaml  project.json  pyproject.toml
apps/scamper-mcp-server/app/: main.py
apps/scamper-mcp-server/app/core/: config.py  logger.py
apps/scamper-mcp-server/app/services/: scamper.py
apps/scamper-mcp-server/app/tools/: __init__.py  lenses.py
apps/triz-mcp-server/: .env.example  Dockerfile  README.md  cloudbuild.yaml  project.json  pyproject.toml
apps/triz-mcp-server/app/: main.py
apps/triz-mcp-server/app/core/: config.py  logger.py
apps/triz-mcp-server/app/prompts/: example.py
apps/triz-mcp-server/app/resources/: __init__.py  example.py
apps/triz-mcp-server/app/services/: triz.py
apps/triz-mcp-server/app/tools/: __init__.py  contradictions.py
backend/: Dockerfile  package-lock.json  package.json  project.json
design-system/: README.md
docs/: custom-domain.md  google-infra-links.md  google-observability.md  idea-lab-investor-pitch-video-scenario.md
eval/: README.md
frontend/: Dockerfile  angular.json  package-lock.json  package.json  project.json
public/: index.html
src/: agent.service.ts  app.module.ts  chat.service.ts  main.ts  solver.controller.ts
test/: chat.service.test.ts
(+155 files in other folders)
